recursion.lessons.recursion.polygonfractal.PolygonFractal.scala.error
PolygonFractal:9: error: type mismatch;
 found   : Int
 required: Int.type
	a=sides-1
               ^PolygonFractal:11: error: value > is not a member of object Int
	if(a>0){
            ^PolygonFractal:13: error: type mismatch;
 found   : Int
 required: Int.type
		a=sides-1
                       ^PolygonFractal:15: error: value > is not a member of object Int
			if(a>0){
                            ^PolygonFractal:17: error: type mismatch;
 found   : Int
 required: Int.type
			a=sides-1
                               ^PolygonFractal:19: error: value > is not a member of object Int
				if(a>0){
                                    ^PolygonFractal:21: error: type mismatch;
 found   : Int
 required: Int.type
				a=sides-1
                                       ^PolygonFractal:23: error: value > is not a member of object Int
					if(a>0){
                                            ^PolygonFractal:25: error: type mismatch;
 found   : Int
 required: Int.type
					a=sides-1
                                               ^